...
                //Credits to Candice for the Back button
                NavigationLink(destination: ContentView()) {
                    RoundedRectangle(cornerRadius: 10)
                        .foregroundStyle(DefaultColors.main_color_2)
                        .frame(width: 50, height: 30)
                        .overlay(
                            Text("Back").foregroundColor(DefaultColors.background))
                }
                .buttonStyle(PlainButtonStyle())
                
                //Utilized ElephantButton struct from Utils
                sectionTitle(text: "Modes")
                ElephantButton(buttonText: Mode ? "Dark Mode" : "Light Mode", action:{ Mode.toggle()}, color: Mode ? .gray.opacity(0.6) : .gray.opacity(0.3))

                sectionTitle(text: "Themes")
                HStack(spacing: 15){
                    ForEach(ThemeSelection.allCases){
                        theme in ElephantButton(buttonText: theme.rawValue.capitalized, action: {selectedTheme = theme}, color: selectedTheme == theme ? DefaultColors.background : Color.gray.opacity(0.2))
                    }
                }
                
                /*Button navigation to sheet that shows larger custom checklist*/
                sectionTitle(text: "Checklist")
                ElephantButton(buttonText: "Add new custom list", action: { showingChecklist = true
                }, color: selectedTheme.colors.first ?? DefaultColors.main_color_2)
                
                
               sectionTitle(text: "Time Settings", centered: true)
                
                timeSection(title: "Pomodoro" , sliders: [
...
                
                Spacer()
            }
        }
        .sheet(isPresented: $showingChecklist){
            NavigationView{
                CheckListView()
                    .environmentObject(storage)
            }
        }
        
        .padding()
        .preferredColorScheme(Mode ? .dark : .light)
...

                Spacer()

                //Cancel & Save button at the bottom of the checklist sheet
                HStack(spacing: 20) {
                    ElephantButton(
                        buttonText: "Cancel",
                        action: { dismiss() },
                        color: .gray.opacity(0.3)
                    )


                    ElephantButton(
                        buttonText: "Save",
                        action: {
                            storage.saveTasks()
                            dismiss()
                        },
                        color: DefaultColors.main_color_2
                    )
...
