...
                    Spacer()//expands leftward
                    if let homePage = homePage {
                        NavigationLink(destination: homePage) {
                            Image(systemName: "house.fill")
                                .font(.title2)
                                .foregroundColor(DefaultColors.main_color_3)
                                .accessibilityIdentifier("homeButton")
                                .allowsHitTesting(true)
                                //nopadding
                        }//NavigationLink
                        .buttonStyle(PlainButtonStyle()) // get rid of the white box behind
                    }//homepage
                }//HStack
...
                HStack {
                    if let backPage = backPage {
                        NavigationLink(destination: backPage) {
                            Image(systemName: "arrow.left.circle.fill")
                                .font(.title)
                                .foregroundColor(DefaultColors.main_color_2)
                                .accessibilityIdentifier("backButton")
                                .allowsHitTesting(true)
                        }//NavigationLink
                        .buttonStyle(PlainButtonStyle()) // get rid of the white box behind
                    }// if backPage
                    
                    Spacer()//expands leftward
                    
                    if let nextPage = nextPage {
                        NavigationLink(destination: nextPage) {
                            Image(systemName: "arrow.right.circle.fill")
                                .font(.title)
                                .foregroundColor(DefaultColors.main_color_2)
                                .accessibilityIdentifier("nextButton")
                                .allowsHitTesting(true)
                        }//NavigationLink
                        .buttonStyle(PlainButtonStyle()) // get rid of the white box behind
                    }//nextPage
                }//HStack
                .padding(.horizontal)
...

// FirstPage
struct ManualView:View{
    var body: some View {
  
            ManualTemplateView(
                currentPageIdentifier: "manualFirstPage",
                content: {
                    // First Page Content Stack
                    VStack(alignment: .leading, spacing: 20) {
                       Text("Welcome to Elephant...")
                            .font(.title)
                            .fontWeight(.bold)
...
