...
            }.frame(alignment: .leading)
        }
        .preferredColorScheme(Mode ? .dark : .light)
        .frame(width: 500, height: 500)
        .padding(10)
        .background(DefaultColors.main_color_1)
        .accessibilityIdentifier("shopMainPageView")
    }
}

#Preview {
    ShopMainPageView()
}
...
